<resources>
    <string name="app_name">restapp</string>

    <string name="title_activity_log_in">LogInActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="user_name">Nombre</string>
    <string name="user_last_name">Apellidos</string>
    <string name="user_email">Correo</string>
    <string name="user_password">Contraseña</string>
    <string name="user_role">Role</string>
    <string name="user_registration">Registrar usuario</string>
    <string name="student_license">Identificación universitaria</string>
    <string name="student_career">Carrera universitaria</string>
    <string name="user_role_admin">Administrador</string>
    <string name="user_role_student">Estudiante</string>


</resources>
