<?xml version="1.0" encoding="utf-8"?>



    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark"
        tools:context=".RegisterActivity">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/login_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="22dp"
                android:gravity="center_horizontal"
                android:text="@string/user_registration"
                android:textColor="#fff"
                android:textSize="26sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_title"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="70dp"
                android:background="@color/colorPrimary"
                android:elevation="14dp"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="30dp"
                    android:background="@color/colorPrimary">


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/register_activity_user_name"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_person_black_24dp"
                            android:drawableTint="@color/accent"
                            android:singleLine="true"
                            android:hint="@string/user_name"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/register_activity_user_last_name"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_person_black_24dp"
                            android:drawableTint="@color/accent"
                            android:singleLine="true"
                            android:hint="@string/user_last_name"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/register_activity_user_email"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_person_black_24dp"
                            android:drawableTint="@color/accent"
                            android:singleLine="true"
                            android:hint="@string/user_email"
                            android:inputType="textEmailAddress" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/register_activity_user_password"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:singleLine="true"
                            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                            android:drawableTint="@color/accent"
                            android:hint="@string/user_password"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingTop="5dp"
                        android:paddingRight="2dp"
                        android:textColor="@color/primary_light"
                        android:text="Role" />



                        <RadioGroup android:id="@+id/radioGroupLanguage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/register_activity_user_role_admin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:textColor="@color/primary_light"
                            android:text="@string/user_role_admin" />
                        <RadioButton
                            android:id="@+id/register_activity_user_role_student"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:textColor="@color/primary_light"
                            android:text="@string/user_role_student" />
                        </RadioGroup>



                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/register_activity_student_license"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:singleLine="true"
                            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                            android:drawableTint="@color/accent"
                            android:hint="@string/student_license"
                            android:enabled="false"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/register_activity_student_career"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:singleLine="true"
                            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                            android:drawableTint="@color/accent"
                            android:hint="@string/student_career"
                            android:inputType="text"
                            android:enabled="false"/>
                    </android.support.design.widget.TextInputLayout>


                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp"
                        android:background="@color/accent"
                        android:text="@string/user_registration"
                        android:textAllCaps="false"
                        android:textColor="@color/primary_light"
                        android:textSize="18sp" />
                </LinearLayout>
            </RelativeLayout>

            <ImageButton
                android:id="@+id/user_profile_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/login_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:elevation="18dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_user_add" />

        </RelativeLayout>
        </ScrollView>
    </FrameLayout>